[gd_scene load_steps=5 format=3 uid="uid://66pky70uhtnf"]

[ext_resource type="Script" uid="uid://bweigo1uufec2" path="res://scripts/SQLController.gd" id="1_yh7up"]
[ext_resource type="PackedScene" uid="uid://dtquu73orvak2" path="res://scenes/song_list_item.tscn" id="2_y3uxb"]
[ext_resource type="Script" uid="uid://bnoj1v80ft2t2" path="res://scripts/music_player.gd" id="3_x426o"]
[ext_resource type="PackedScene" uid="uid://cru72a0rwa46l" path="res://scenes/main_controls.tscn" id="4_57473"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yh7up")

[node name="SongList" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 159.0
offset_bottom = -98.0
grow_vertical = 2

[node name="Control" parent="SongList" instance=ExtResource("2_y3uxb")]
layout_mode = 2

[node name="SongListItem" parent="SongList" instance=ExtResource("2_y3uxb")]
layout_mode = 2

[node name="MusicPlayer" type="AudioStreamPlayer2D" parent="."]
script = ExtResource("3_x426o")

[node name="CurrentlyPlaying" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 142.0
offset_top = -82.0
offset_right = 499.0
offset_bottom = -26.0
grow_vertical = 0

[node name="MainControls" parent="." instance=ExtResource("4_57473")]
layout_mode = 0
offset_left = 145.0
offset_top = 584.0
offset_right = 984.0
offset_bottom = 646.0

[connection signal="finished" from="MusicPlayer" to="." method="_on_audio_stream_player_2d_finished"]
